methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:3: error: not found: value bushDown
    left();forward();bushDown()brushUp();backward()
                     ^PictureMono1:4: error: not found: value bushDown
    right ;forward();bushDown();brushdown();backward()
                     ^PictureMono1:4: error: not found: value brushdown
    right ;forward();bushDown();brushdown();backward()
                                ^