methods.picture.PictureMono1.scala.code
override def run() {
  def makeV() {
    left();forward();bushDown()brushUp();backward()
    right ;forward();bushDown();brushdown();backward()
    forward();brushDown();brushUp();backward()
  }
  
}